--- a/hosting/android/app/src/main/AndroidManifest.xml
+++ b/hosting/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-    package="com.webbpulse.checkout"
+    package="com.webbpulse.inventory"
     <application
-        android:label="webbpulse_checkout"
+        android:label="webbpulse_inventory_management"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
