--- a/hosting/macos/Runner/Configs/AppInfo.xcconfig
+++ b/hosting/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = webbpulse_checkout
+PRODUCT_NAME = webbpulse_inventory_management
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.webbpulseCheckout
+PRODUCT_BUNDLE_IDENTIFIER = com.webbpulse.inventory
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
