--- a/hosting/pubspec.yaml
+++ b/hosting/pubspec.yaml
@@ -1,8 +1,7 @@
-name: webbcheck
-description: "A new Flutter project."
+name: webbpulse_inventory_management
+description: "A program built in flutter to do simple tracking of device checkout status."
 publish_to: 'none'
-version: 0.1.0
-
+version: 1.0.0
 environment:
   sdk: '>=3.3.0 <4.0.0'
 
@@ -25,13 +24,38 @@ dependencies:
   permission_handler: ^11.3.1
   path_provider: ^2.1.4
   universal_html: ^2.2.4
+  google_sign_in: ^6.2.1
+  sign_in_with_apple: ^6.1.2
+  firebase_ui_oauth_google: ^1.3.2
+  firebase_ui_oauth_apple: ^1.2.20
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
   assets:
     - assets/boxes.jpg
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/box.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
+  web:
+    generate: true
+    image_path: "assets/icon/box.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/icon/box.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icon/box.png"
