--- a/hosting/web/manifest.json
+++ b/hosting/web/manifest.json
@@ -1,10 +1,10 @@
 {
-    "name": "webbpulse_checkout",
-    "short_name": "webbpulse_checkout",
+    "name": "webbpulse_inventory_management",
+    "short_name": "webbpulse_inventory_management",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#hexcode",
+    "theme_color": "#hexcode",
     "description": "A new Flutter project.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
